# roast-my-startup-idea

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  (+1 more)
evals/: HUMAN_REVIEW.md  README.md  __init__.py  report.py  run_audit.py  run_eval.py  runner.py  workload.py
src/: app.py  config.py  coordinator_agent.py  events.py  idea_context.py  llm_resilience.py  log_config.py  modeling.py  pipeline.py  run_control.py
tests/: __init__.py  test_api_events.py  test_api_operability.py  test_api_runs.py  test_appeal_coaching.py  test_appeal_eval_scorer.py  test_appeal_service.py  test_debate_graph.py  test_debate_revote.py  test_debate_router.py  test_debate_streaming.py  test_debate_transcript.py  test_deep_agent_orchestrator.py  test_eval_audit.py  test_eval_regression.py  test_eval_run.py  test_eval_workload.py  test_idea_context.py  test_judge_prompt_context.py  test_judges_guardrails.py  test_judges_schema_limits.py  test_judges_service.py  test_lens_scorer.py  test_lens_uniqueness.py  test_llm_resilience.py  test_memory.py  test_modeling.py  test_moderator_node.py  test_observability.py  test_pipeline_deepagent.py  test_research_service.py  test_roast_panel_parser.py  test_run_control.py  test_run_metrics.py  test_streamlit_runner.py  test_synthesis.py  test_text_display.py  test_transcript_exporter.py  test_verification.py  test_version.py  (+1 more)
web/: .env.example  .gitignore  .prettierignore  README.md  package-lock.json  package.json
(+199 files in other folders)
