[project]
name = "roast-my-startup"
version = "0.2.0"
description = "Multi-agent startup critique app"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = ["E501"]
# Tests and eval CLIs bootstrap sys.path before project imports; keep that pattern
# without fighting E402 on every file.
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]
"evals/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = [
    "api",
    "appeal",
    "config",
    "coordinator_agent",
    "debate",
    "evals",
    "events",
    "judges",
    "log_config",
    "memory",
    "modeling",
    "observability",
    "orchestrator",
    "pipeline",
    "research",
    "ui",
    "utils",
    "version",
]
force-sort-within-sections = true
